# yupic-legacy

./: BUILD.md  LICENSE  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: build-macos-legacy.yml  build-windows-legacy.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
