[package]
name = "yupic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
# Enable only HEIF by default. JXL/RAW can be enabled with --features jxl,raw.
default = ["heif", "raw"]
# Enable HEIC/HEIF via libheif (requires system libheif/HEVC)
heif = ["libheif-rs"]
# Enable JPEG XL decoding
jxl = ["jxl-oxide"]
# Enable RAW decoding (CR2/NEF/RAF/etc.)
raw = ["rawloader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yupic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview2-com"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }
base64 = "0.22"
libheif-rs = { version = "0.20", optional = true }
jxl-oxide = { version = "0.9", optional = true }
rawloader = { version = "0.37", optional = true }
exif = { package = "kamadak-exif", version = "0.6" }
rayon = "1.10"

[patch.crates-io]
# Force dependencies using getrandom 0.3 to use a version compatible with Windows 7
# (Wait for now, let's see if toolchain pinning is enough)

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Remove panic unwinding to reduce binary size
strip = true        # Automatically strip symbols from the binary

